# zip2telegraph-bot

./: .env.example  .env.local-bot-api.example  .env.public-bot-api.example  .gitignore  Dockerfile  Dockerfile.telegram-bot-api  README.md  docker-compose.local-bot-api.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/nginx/: zip2telegraph-images.conf.example
docs/: architecture.md  deployment-vps.md  local-bot-api.md  nginx-static-images.md  telegram-api-credentials.md
scripts/: create_telegraph_account.py
src/zip2telegraph_bot/: __main__.py  app.py  config.py  db.py  errors.py  logging.py  models.py  queue.py
src/zip2telegraph_bot/services/: admins.py  rate_limit.py  static_publisher.py  telegraph.py  zip_processor.py
src/zip2telegraph_bot/utils/: clock.py  formatting.py  naming.py  sorting.py
tests/: test_naming.py  test_rate_limit.py  test_sorting.py  test_static_publisher.py  test_zip_processor.py
